force-app/main/default/objects/Promotion_Item_Pack__c/Promotion_Item_Pack__c.object-meta.xml
<CustomObject>
    <label>Promotion Item Pack</label>
    <nameField>
        <displayFormat>PIP-{0000}</displayFormat>
        <label>Promotion Item Pack Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Item Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>