force-app/main/default/objects/Promotion_Item_Pack__c/fields/Is_Public_Web__c.field-meta.xml
<CustomField>
    <fullName>Is_Public_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public Web</label>
    <type>Checkbox</type>
</CustomField>