force-app/main/default/objects/Promotion_Item_Pack__c/fields/Name_VN__c.field-meta.xml
<CustomField>
    <fullName>Name_VN__c</fullName>
    <formula>Promotion_Pack__r.Name_VN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name VN</label>
    <type>Text</type>
</CustomField>