force-app/main/default/objects/Promotion_Item_Pack__c/fields/Pack_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pack_Amount__c</fullName>
    <label>Pack Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>