force-app/main/default/objects/Promotion_Item_Pack__c/fields/Promotion_Pack__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Pack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Pack</label>
    <referenceTo>Promotion_Pack__c</referenceTo>
    <relationshipLabel>Promotion Item Packs</relationshipLabel>
    <relationshipName>Promotion_Item_Packs</relationshipName>
    <type>Lookup</type>
</CustomField>