force-app/main/default/objects/Promotion_Item_Pack__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_VN__c</columns>
    <columns>Is_Public_Web__c</columns>
    <columns>Pack_Amount__c</columns>
    <columns>Promotion_Item__c</columns>
    <columns>Promotion_Pack__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>